<resources>
    <string name="app_name">Products-VK</string>
    <string name="home_title">Products</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="description">Image</string>
    <string name="productExample">Product</string>
    <string name="DescriptionExample">Test description</string>
    <string name="priceExample">Price: 1234 $</string>
    <string name="brandExample">Brand: Xiaomi</string>
    <string name="brand">Brand: %1$s</string>
    <string name="price">Price: %1$s $</string>
    <string name="categories">Categories</string>
    <string name="letterExample">C</string>
    <string name="try_again">Try again</string>
    <string name="no_internet_try_again_later">No internet, try again later!</string>
</resources>