<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.DetailProductFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:contentDescription="@string/description"
            android:scaleType="centerCrop"
            android:src="@color/accent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/HeaderFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:gravity="center"
            android:textColor="@color/primary_text"
            android:text="@string/productExample"
            app:layout_constraintTop_toBottomOf="@id/iv_photo" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toEndOf="@id/tv_brand"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_10sdp"
            style="@style/HeaderThird"
            android:textColor="@color/secondary_text"
            android:text="@string/priceExample"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tv_brand"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="@id/tv_price"
            app:layout_constraintTop_toBottomOf="@id/tv_price"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_price"
            android:layout_marginStart="@dimen/_15sdp"
            android:text="@string/brandExample"
            android:textStyle="bold"
            android:textColor="@color/secondary_text"
            style="@style/HeaderThird"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            style="@style/Regular"
            tools:text="@tools:sample/lorem/random"/>




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>